--- a/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/view_spit"
         android:gravity="center"
+
         android:orientation="horizontal"
         android:paddingBottom="@dimen/indicator_margin" />
 
@@ -52,6 +53,19 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 >
+
+                <TextView
+                    android:id="@+id/soucang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textSize="13sp"
+                    android:textColor="#FFB706"
+                    android:text="搜藏"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    >
+                </TextView>
 
             </LinearLayout>
 
